Fix some issues with mouse entering/exiting image scale sticker. Show crosshair cursor if the image is too narrow in width or height.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -301,6 +301,12 @@ a, img {
     #img-preview {
         cursor: none;
     }
+
+    .img-cursor {
+        /*cursor: url("images/crosshair_cursor.png") 11 11, auto; /* for non-webkit-fallback *
+        cursor: -webkit-image-set( url("images/crosshair_cursor.png") 1x, url("images/crosshair_cursor@2x.png") 2x ) 11 11, auto;*/
+        cursor: crosshair;
+    }
     
     #img-scale {
         display: block;
